force-app/main/default/objects/Trigger_Bypass__c/Trigger_Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls trigger execution bypasses at user, profile, and organization levels.</description>
    <label>Trigger Bypass</label>
</CustomObject>