force-app/main/default/objects/Trigger_Bypass__c/fields/Bypass_All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, ALL triggers will be bypassed for this user/profile/org.</description>
    <inlineHelpText>Use for data migrations or bulk operations. BE CAREFUL!</inlineHelpText>
    <label>Bypass All Triggers</label>
    <type>Checkbox</type>
</CustomField>