force-app/main/default/objects/Trigger_Bypass__c/fields/Bypass_Object_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Object_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable object-specific bypass (uses Custom Metadata).</description>
    <inlineHelpText>When checked, object-level bypasses from Trigger_Bypass_Config__mdt will be enforced.</inlineHelpText>
    <label>Bypass Object Triggers</label>
    <type>Checkbox</type>
</CustomField>