force-app/main/default/objects/Trigger_Bypass__c/fields/Force_Bypass_Objects__c.field-meta.xml
<CustomField>
    <fullName>Force_Bypass_Objects__c</fullName>
    <description>Comma-separated list of object API names to bypass (emergency use).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Example: Account,Contact,Opportunity</inlineHelpText>
    <label>Force Bypass Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>