force-app/main/default/objects/Trigger_Bypass__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>Bypass_All_Triggers__c</columns>
    <columns>Bypass_Object_Triggers__c</columns>
    <columns>Force_Bypass_Objects__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>